# kikimora

./: Makefile  Makefile.bak  Makefile.in  README  README.md  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
kikimora-0.1.0/: Makefile.in  configure.ac
kikimora-0.1.0/src/: Makefile.am  Makefile.in  main.cpp
kikimora-0.1.0/src/lib/: Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  kikimora  kikimora.cpp  main.cpp
src/.deps/: jsoncpp.Po  main.Po
src/lib/: Makefile
src/lib/json/: jsoncpp.cpp
src/lib/json/.deps/: jsoncpp.Po
src/lib/kikimora/: Makefile  Makefile.am  Makefile.in  a.out  conf_package.hpp  demo2.hpp  diffs.hpp  json_conf.hpp  test  test.cpp  test.diff  xml_conf.hpp  xx  xx.cpp  yaml_conf.hpp
test/: ads.conf  test.cpp  test.diff  test_kikimora.cpp  xx.list
